--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,7 +5,7 @@
 // $info:          $cyan !default;
 // $warning:       $yellow !default;
 $danger:        #C42D40;
-// $light:         $gray-100 !default;
+$light:         lightgray;
 // $dark:          $gray-800 !default;
 
 $courgette : 'courgette',cursive;
