--- a/src/scss/modules/_style.scss
+++ b/src/scss/modules/_style.scss
@@ -128,10 +128,9 @@ body {
         height: 120px;
         background-image: url("../../../public/images/decoration_line.png");
         background-repeat: no-repeat;
-        background-position: bottom center;
-        background-position-y: 60%;
+        background-position: bottom;
+        background-position-y: 100%;
         h1 {
-            vertical-align: text-top;
             span {
                 color: $danger;
                 font-size: 1.3em;
@@ -140,6 +139,7 @@ body {
         
     }
     .menu {
+        overflow: hidden;
         .row {
             .col-2 {
                 .list-group {
@@ -155,6 +155,7 @@ body {
                     }
                     .active {
                         position: relative;
+                        
                     
                         &::after {
                             position: absolute;
@@ -163,12 +164,24 @@ body {
                             width: 4px;
                             bottom: 0;
                             height: 100%;
-                            right: 0
+                            right: -4px
                         }
                     }
                 }
             }
-            
+            .col-10 {
+                .row {
+                    .col-lg-6 {
+                        .ticket {
+
+                            border-bottom: dotted 1px $secondary;
+                            img {
+                                border: solid rgba(211, 211, 211, 0.479) 5px;
+                            }
+                        }
+                    }
+                }
+            }
             
         }
     }
