fin section white 1 menu list, début vendredi

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16024,6 +16024,8 @@ h3 {
 }
 body {
   font-family: "lato", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 body header {
   height: 100vh;
@@ -16125,6 +16127,9 @@ body .our {
 body .our h1 span {
   color: #C42D40;
   font-size: 1.3em;
+}
+body .title {
+  height: 120px;
 }
 body .menu {
   overflow: hidden;
