--- a/src/scss/modules/_style.scss
+++ b/src/scss/modules/_style.scss
@@ -1,6 +1,8 @@
 @import "./responsive";
 body {
     font-family: $lato;
+    margin:0;
+    padding: 0;
     header {
         // display: flex;
         // flex-direction: column;
@@ -137,6 +139,10 @@ body {
             }
         }
         
+    }
+    .title {
+        // width: 100%;
+        height: 120px;
     }
     .menu {
         overflow: hidden;
