--- a/src/scss/modules/_style.scss
+++ b/src/scss/modules/_style.scss
@@ -13,16 +13,19 @@ body {
         background-size: cover;
         background-repeat: no-repeat;
         position: relative;
+        overflow: hidden;
         nav {
             
             .navbar-nav {
                 flex:1;
+                // MEDIA QUERY width ? 100%? Pour TOGGLE?
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
                 text-align: center;
                 .nav-link {
                     text-transform: uppercase;
+                    flex: 1;
                     // padding: auto 30px;
                     &:hover {
                         background-color: $danger;
@@ -73,6 +76,7 @@ body {
                         width: 50%;
                         height: 60vh;
                         margin-bottom: 15vh;
+                        // voir si pas mieux en auto pour le responsive pour le toggle !
                         .text {
                             h1 {
                                 font-family: $courgette;
@@ -190,6 +194,12 @@ body {
             }
             
         }
+    }
+    #team {
+        background: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4)),url("../../../public/images/team_background.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        padding: 5px 5%;
     }
 
     
