--- a/src/scss/modules/_style.scss
+++ b/src/scss/modules/_style.scss
@@ -280,6 +280,18 @@ body {
             }
         }
     }
+    #contact {
+        background-image: url("../../../public/images/main_bg.jpg");
+        .container {
+            width: 30%;
+            margin: 50px 5%;
+            border-radius: 15px;
+            .item {
+                
+            }
+
+        }
+    }
     
     
 
