--- a/src/scss/modules/_style.scss
+++ b/src/scss/modules/_style.scss
@@ -132,7 +132,7 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 50%;
+        // width: 50%;
         font-family: $courgette;
         height: 120px;
         background-image: url("../../../public/images/decoration_line.png");
@@ -270,7 +270,6 @@ body {
         background: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4)), url("../../../public/images/testimonials_background.jpg");
         background-repeat: no-repeat;
         background-size: cover;
-        // padding: ;
         .columns2 {
             margin: auto 5%;
             img {
@@ -286,9 +285,6 @@ body {
             width: 30%;
             margin: 50px 5%;
             border-radius: 15px;
-            .item {
-                
-            }
 
         }
     }
