--- a/src/scss/modules/_responsive.scss
+++ b/src/scss/modules/_responsive.scss
@@ -49,7 +49,11 @@
             }
         }
     }
-
+    #contact {
+        .container {
+            width: 60% !important;
+        }
+    }
 
 }
 
@@ -105,6 +109,7 @@ body {
            
         }
     }
+
     .white1 {
         #resa {
             .query {
@@ -117,10 +122,11 @@ body {
             }
         }
     }
-    // .white1 {
-    //     #about {
-            
-    //     }
-    // }
+    #contact {
+        .container {
+            width: 80% !important;
+        }
+    }
+
 }
 }
