--- a/src/scss/modules/_style.scss
+++ b/src/scss/modules/_style.scss
@@ -206,27 +206,46 @@ body {
         background-size: cover;
         background-repeat: no-repeat;
         padding: 5px 5%;
-        .chef-super
+        .chefsuper {
+            position: relative;
+            // padding-bottom: 20px;
             .chef {
                 
-                position: relative;
-                overflow: hidden;
-                .animation {
-                    height: 150px;
-                    position: absolute;
-                    bottom: -170px;
-                    z-index: 3;
-            
-                }
-                &:hover .animation {
+                .image {
+                    overflow: hidden;
+                    position: relative;
+                    .animation {
+                        height: 150px;
+                        position: absolute;
+                        bottom: -180px;
+                        z-index: 3;
+                        border-bottom: white solid 2px;
+                        transition: 1.5s;
+                    }
+
+                    &:hover .animation {
                         animation: rouge 1.5s;
-                        animation-delay: 0.2s;
+                        animation-delay: 1s;
+                        animation-fill-mode: forwards;
+                    }
+                }
+                
+                .text {
+                    text-align: center;
+                    position: absolute;
+                    width: 50%;
+                    height: 20px;
+                    right: 25%;
+                }
+                
+                &:hover .text {
+                    animation: disappear 1s;
+                    animation-fill-mode: forwards;
                 }
 
             }
-            .chef:hover .text {
-                    animation: disappear 0.2s;
-            }
+            
+            
         }
     }
   
@@ -350,17 +369,17 @@ body {
     from {
        bottom: -170px;
     }
-  
+    
     to {
-      bottom: 0;
+        bottom: 0;
     }
   }
   @keyframes disappear {
     from {
-       opacity: 1;
+       bottom: -20px;;
     }
   
     to {
-      opacity: 0;
+      bottom: 20px;
     }
   }
